fixed google maps overflow situation

--- a/client/main.css
+++ b/client/main.css
@@ -311,5 +311,5 @@ i.trash.icon {
 
 .itinPageScroll {
     overflow-y: auto;
-    height: 100vh;
+    height: 95vh;
 }
